--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=social-media-app
-spring.datasource.url=jdbc:postgres://localhost:5431/social_media_db
-spring.datasource.username=root
-spring.datasource.driver-class-name=com.postgres.cj.jdbc.Driver
+# Postgres database configuration
+spring.datasource.url=jdbc:postgresql://localhost:5431/social_media_db
+spring.datasource.username=postgres
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true 
+
+
