add some values to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true 
 
 
+# Security configuration
+jwt.secret-key=aW5zZWN1cmUtc2VjcmV0LXN0cmluZy1mb3ItanNvbg==
+jwt.header=Authorization
+jwt.expiration-time=3600000
+
+
+
