--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,26 @@ spring.application.name=social-media-app
 spring.datasource.url=jdbc:postgresql://localhost:5431/social_media_db
 spring.datasource.username=postgres
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Enable SQL logging
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true 
-
-
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Security configuration
 jwt.secret-key=aW5zZWN1cmUtc2VjcmV0LXN0cmluZy1mb3ItanNvbg==
 jwt.header=Authorization
 jwt.expiration-time=3600000
 
 
+# Cloudinary configuration
+cloudinary.cloud-name=dhrj6nlxm
+cloudinary.api-key=779746153897455
+cloudinary.api-secret=t3O9-Z9R3m63DTKMboZK1ItK3oA
 
+
+# collect statistics on query execution times.
+management.endpoints.web.exposure.include=*
+management.endpoints.web.base-path=/actuator
+management.server.port=8080
+management.metrics.export.prometheus.enabled=true
