--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-websocket -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-websocket</artifactId>
+    <version>3.5.3</version>
+</dependency>
+
 	</dependencies>
 
 	<build>
