chore: configure Cloudinary for reels

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,8 @@ jwt.expiration-time=3600000
 cloudinary.cloud-name=dhrj6nlxm
 cloudinary.api-key=779746153897455
 cloudinary.api-secret=t3O9-Z9R3m63DTKMboZK1ItK3oA
-
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 
 # collect statistics on query execution times.
 management.endpoints.web.exposure.include=*
