--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ management.endpoints.web.exposure.include=*
 management.endpoints.web.base-path=/actuator
 management.server.port=8080
 management.metrics.export.prometheus.enabled=true
+
+
+java.runtime.version=17
